@@ -127,7 +127,8 @@
                     :plugins []}
              :uberjar {:resource-paths ["config/prod" "config/defaults"]
                        :prep-tasks ["clean" ["less" "once"] ["cljsbuild" "once" "min"] "compile"]
-                       :aot :all}}
+                       :aot :all}
+             :java9 {  :jvm-opts ["--add-modules" "java.xml.bind"]}}
 
   :cljsbuild {:builds {:dev {:source-paths ["src/cljs"]
                              :figwheel {:on-jsload "bluegenes.core/mount-root"}
@@ -143,8 +144,8 @@
                                         ;:parallel-build true
                                         :preloads [devtools.preload
                                                    re-frisk.preload]
-                                        :external-config {:devtools/config {:features-to-install :all}}
-                                        }}
+                                        :external-config {:devtools/config {:features-to-install :all}}}}
+
 
                        :min {:source-paths ["src/cljs"]
                              :jar true
@@ -174,4 +175,4 @@
                    ;; How often should this repository be checked for
                    ;; snapshot updates? (:daily, :always, or :never)
                    ;:update :always
-                   }]])
+}]])
